[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
yew-webtransport = { path = "../../"}
gloo-console = "0.2.3"
chrono = "0.4.19"
web-sys = {version = "0.3.61", features = [ "WebSocket", "WebTransport", "WritableStream", "ReadableStream", "ReadableStreamDefaultReader", "ReadableStreamReadResult", "WebTransportSendStream", "WritableStreamDefaultWriter", "WebTransportDatagramDuplexStream", "WebTransportCloseInfo", "WebTransportBidirectionalStream", "WebTransportReceiveStream"]}

# TODO: Remove this after web-sys is released
[patch.crates-io]
wasm-bindgen-shared = { git= "https://github.com/rustwasm/wasm-bindgen.git", rev = "27173549f6a196a869cec525f8f87adec55c738c" }
js-sys = { git= "https://github.com/rustwasm/wasm-bindgen.git", rev = "27173549f6a196a869cec525f8f87adec55c738c" }
web-sys = { git= "https://github.com/rustwasm/wasm-bindgen.git", rev = "27173549f6a196a869cec525f8f87adec55c738c" }
wasm-bindgen-futures = { git= "https://github.com/rustwasm/wasm-bindgen.git", rev = "27173549f6a196a869cec525f8f87adec55c738c" }
wasm-bindgen = { git= "https://github.com/rustwasm/wasm-bindgen.git", rev = "27173549f6a196a869cec525f8f87adec55c738c" }
