[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.87"
yew = { version = "0.21.0", features = ["csr"] }
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
js-sys = { version = "0.3.64", optional = false }
yew-webtransport = { path = "../../"}
gloo-console = "0.2.3"
chrono = "0.4.19"
web-sys = {version = "0.3.64", features = ["WebSocket", "WebTransport", "WritableStream", "ReadableStream", "ReadableStreamDefaultReader", "ReadableStreamReadResult", "WebTransportSendStream", "WritableStreamDefaultWriter", "WebTransportDatagramDuplexStream", "WebTransportCloseInfo", "WebTransportBidirectionalStream", "WebTransportReceiveStream"]}

