[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
yew = { version = "0.22.0", features = ["csr"] }
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
js-sys = "0.3"
yew-webtransport = { path = "../../"}
gloo-console = "0.3"
chrono = "0.4"
web-sys = {version = "0.3.70", features = ["WebSocket", "WebTransport", "WritableStream", "ReadableStream", "ReadableStreamDefaultReader", "ReadableStreamReadResult", "WebTransportSendStream", "WritableStreamDefaultWriter", "WebTransportDatagramDuplexStream", "WebTransportCloseInfo", "WebTransportBidirectionalStream", "WebTransportReceiveStream"]}

